--- a/backend/playground/package.json
+++ b/backend/playground/package.json
@@ -18,5 +18,8 @@
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "solc": "^0.8.17"
   }
 }
